--- a/donate.html
+++ b/donate.html
@@ -316,7 +316,7 @@
           </div>
           <div id="donation-toggle-bubble">
             <svg id="monthly-heart" class="monthly-chosen hidden" width="40" height="40">
-              <image href="https://dbqvwi2zcv14h.cloudfront.net/ak-dev/monthly-heart" width="40" height="40"></image>
+              <image href="https://dbqvwi2zcv14h.cloudfront.net/ak-dev/monthly-heart.svg" width="40" height="40"></image>
             </svg>
             <div id="bubble-text">
               <div class="once-chosen"><strong>Make it monthly?</strong> Sustaining donations help us plan and focus on the
