Debugging code and disable enable paypal option for now

--- a/donate.html
+++ b/donate.html
@@ -604,10 +604,10 @@
 				{% endif %}
 
 				{% if show_paypal %}
-	        <div class="ak-payment-options text-center ak-donate-area-step-3">
+	        <!-- <div class="ak-payment-options text-center ak-donate-area-step-3">
 	        	<input type="hidden" name="paypal" value="0" id="ak-pay-by-paypal">
 						<p class="margin-bottom-small text-small"><em>{% filter ak_text:"donate_or_check_out_with" %}or check out with{% endfilter %} </em> <button type="submit" id="ak-paypal-button" class="button bg-ltgray button-small"><img src="/media/modern/paypal-logo-1.svg" style="position:relative;top:3px;"></button></p>
-	        </div>
+	        </div> -->
 				{% endif %}
 				</div>
 			</div>
