--- a/donate.html
+++ b/donate.html
@@ -1536,7 +1536,7 @@
     const paymentsDetailsContent = $("#payments-details-content");
     const continueButton = $("#ak-continue-button");
   
-  
+    console.log(paymentsDetailsContent, "Payments DET CONT")
     const removeActivePaymentsClass = () => {
       $.each(paymentsTitles, (index, title)=>{
           const titleCtn = $(title);
