make the expiration date field full width

--- a/donate.html
+++ b/donate.html
@@ -1472,7 +1472,7 @@
 					    <input id="ak-card_num" type="text" name="card_num">
 						</div>
 						<div class="ak-err-below">
-							<div id="ak-fieldbox-exp_date" class="input-select input-cc-expiration ak-input-type-user c5 ct5 margin-top-none">
+							<div id="ak-fieldbox-exp_date" class="input-select input-cc-expiration ak-input-type-user c10 margin-top-none">
 				        <input type="hidden" name="required" value="exp_date_month" id="ak-exp_date_month-required">
 				        <label for="ak-exp_date_month">{% filter ak_text:"field_exp_date" %}Expiration Date{% endfilter %}</label>
 				        <div id="ak-exp_date-hosted" class="hosted-field"></div>
