--- a/donate.html
+++ b/donate.html
@@ -1545,8 +1545,26 @@
       titleCtn.click(e=>{
         console.log("Clicked here?")
           const clicked = $(e.target);
+          const parentHasClass = clicked.parents(`.${CONSTANTS.ACTIVE_PAYMENTS_CLASS}`).length > 0;
+          if(parentHasClass) return;
+            else {
+            const closestDiv = clicked.closest('.payments-title');
+            console.log(closestDiv, "hapaz")
+
+            if(closestDiv.hasClass(CONSTANTS.PAYPAL_TARGET_CLASS)){
+                paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.PAYPAL);
+                continueButton.text('Continue to PayPal')
+            } else {
+                paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD);
+                continueButton.text('Continue')
+            }
+            removeActivePaymentsClass();
+            closestDiv.addClass(CONSTANTS.ACTIVE_PAYMENTS_CLASS);
+            return;
+          }
+
           if(clicked.hasClass(CONSTANTS.ACTIVE_PAYMENTS_CLASS)) return;
-          removeActivePaymentsClass()
+          // removeActivePaymentsClass()
           clicked.addClass(CONSTANTS.ACTIVE_PAYMENTS_CLASS);
 
           // Update Content
