fix: refactor mark_prev_step_complete function

--- a/donate.html
+++ b/donate.html
@@ -951,17 +951,18 @@
     }
 
     function mark_prev_step_complete() {
-      $('input[name="ak-donate-step"]:checked')
-        .closest('label')
-        .find('span.ak-step-number')
-        .addClass('hidden');
+      if (current_step != 3) {
+        $('input[name="ak-donate-step"]:checked')
+          .closest('label')
+          .find('span.ak-step-number')
+          .addClass('hidden');
 
-      // show complete tick
-      $('input[name="ak-donate-step"]:checked')
-        .closest('label')
-        .find('span.ak-step-complete')
-        .removeClass('hidden');
-
+        // show complete tick
+        $('input[name="ak-donate-step"]:checked')
+          .closest('label')
+          .find('span.ak-step-complete')
+          .removeClass('hidden');
+      }
         // change amount label if step 1 is complete
         // if (current_step === 1) {
         //   $('input[name="ak-donate-step"]:checked')
@@ -981,26 +982,7 @@
         validate_step(current_step);
 
         if (!step_has_errors) {
-          // hide current step number
-           $('input[name="ak-donate-step"]:checked')
-            .closest('label')
-            .find('span.ak-step-number')
-            .addClass('hidden');
-
-          // show complete tick
-            $('input[name="ak-donate-step"]:checked')
-            .closest('label')
-            .find('span.ak-step-complete')
-            .removeClass('hidden');
-
-          // change amount label if step 1 is complete
-          // if (current_step === 1) {
-          //   $('input[name="ak-donate-step"]:checked')
-          //     .closest('label')
-          //     .find('span.ak-amount-label')
-          //     .html('<span class="ak-currency-sym">{{ page.currency_sym }}</span><span class="ak-donation-total-amount"></span><span class="ak-donation-monthly" style="display: none;">/mo</span>')
-          //     .css({"text-decoration": "underline"});
-          // }
+          mark_prev_step_complete();
 
           // check radio button in next step
           $('input[name="ak-donate-step"]:checked')
